Fix login header wrapping issues

--- a/src/main/sass/style.scss
+++ b/src/main/sass/style.scss
@@ -945,12 +945,12 @@ body.login-page {
   }
 
   .login-form {
-    padding: 0em;
+    padding: 0px;
 
     .login-header {
-      padding: 1em 0;
+      padding: 2px 0px;
       background-color: #111;
-      opacity: 0.95;
+      margin-bottom: 0px;
     }
 
     .login-title {
@@ -999,7 +999,7 @@ body.login-page {
   body.login-page {
     .login-form {
       .login-header {
-        margin-bottom: 1em;
+        margin-bottom: 0px;
       }
     }
     .login-box {
